tests/resources/valid/function/allowed_exception.mamba
class MyErr isa Exception

def f(x: Int) raises [MyErr] => print "nothing"
def g(x: Int) raises [MyErr] => f(x)
