tests/resources/invalid/type/class/wrong_generic_type.mamba
class MyClass[A isa String]
    def my_fun(x: A) -> A => x

def my_class = MyClass[Int]()
